--- a/about.html
+++ b/about.html
@@ -38,11 +38,25 @@
                     <p>Центр эффективного восстановления и укрепления здоровья "Шагай" - это место, где заботятся о вашем здоровье и благополучии. Мы предлагаем уникальные программы реабилитации, разработанные специально для восстановления двигательных функций после различных заболеваний и травм. Наши специалисты используют передовые методы, такие как система Экзарта, для достижения наилучших результатов.</p>
                     <p>Мы работаем с широким спектром диагнозов, включая инсульты, черепно-мозговые травмы,с диагнозами детей ДЦП, РАС , ЗПРР. Наши программы включают адаптивную физкультуру, массаж и другие методы, направленные на восстановление и укрепление вашего здоровья специалистами из разных городов России. </p>
                     <p>Мы готовы помочь вам сделать шаг к новому качеству жизни.</p>
-                    <h5>Запишитесь на консультацию по телефону: 8 (964) 436-99-96.</h5>
                 
                 </section>
                 <section>
                     <h2>Связь с нами</h2>
+                    <section class="item green">
+
+                        <p href="">Тел: 8 (964) 436-99-96</p>
+                    </section>
+                    
+                    <section class="item orange">
+
+                       <p>Почта: Vesna030@mail.ru</p>
+                    </section>
+
+                    <section class="item blue">
+
+                        <p>г.Находка, ул.Куйбышева д.4а ‌офис 3</p>
+                    </section>
+                </div>
                 </section>
             </div>
 
