--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preload" href="fonts/SF-Pro-Display-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/SF-Pro-Rounded-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/fonts.css">
     <title>ШагАй - Контакты</title>
@@ -42,7 +44,7 @@
                 <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Adf83bae7646b454b42d411e18da3ebdacab0b4bc91e34bf77e1ea420043670be&amp;source=constructor" width="100%" height="400px" frameborder="0"></iframe>
             </section>
         </div>
-        
+
     </div>
     </main>
     <script src="scripts/main.js"></script>
