--- a/about.html
+++ b/about.html
@@ -10,6 +10,11 @@
     <title>ШагАй - О нас</title>
 </head>
 <body>
+
+    <div id="preloader">
+    <div class="spinner"></div>
+    </div>
+
     <header>
         <a href="/">
         <div class="logo">
