--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="styles/fonts.css">
 </head>
 <body>
+
+    <div id="preloader">
+    <div class="spinner"></div>
+    </div>
+
     <header>
         <a href="/">
         <div class="logo">
