--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <link rel="preload" href="fonts/SF-Pro-Display-Medium.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="fonts/SF-Pro-Rounded-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/fonts.css">
     <title>ШагАй - О нас</title>
 </head>
 <body>
@@ -49,17 +48,17 @@
                 </section>
                 <section>
                     <h2>Связь с нами</h2>
-                    <section class="item green">
+                    <section class="item">
 
                         <p href="">Тел: 8 (964) 436-99-96</p>
                     </section>
                     
-                    <section class="item orange">
+                    <section class="item">
 
                        <p>Почта: Vesna030@mail.ru</p>
                     </section>
 
-                    <section class="item blue">
+                    <section class="item">
 
                         <p>г.Находка, ул.Куйбышева д.4а ‌офис 3</p>
                     </section>
