--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <a href="/">
         <div class="logo">
-            <img src="images/logo.png" alt="bear-logo">
+            <img src="images/logo.webp" alt="bear-logo">
             <h1>ШагАй</h1>
         </div>
         </a>
@@ -52,7 +52,7 @@
             <h2 style="text-align: center;">Приемущества</h2>
         <div class="container">
             <section class="item">
-                    <img src="images/boy.png" alt="Индивидуальность - Иконка">
+                    <img src="images/boy.webp" alt="Индивидуальность - Иконка">
                 <div>
                     <h3>Индивидуальный подход</h3>
                     <p>Учитываем особенности каждого ребенка для эффективного развития ребенка ,как личность.</p>
@@ -60,7 +60,7 @@
             </section>
 
             <section class="item">
-                    <img src="images/medal.png" alt="Компетентный специалист - Иконка">
+                    <img src="images/medal.webp" alt="Компетентный специалист - Иконка">
                 <div>
                     <h3>Компетентные специалисты</h3>
                     <p>Наш коллектив — профессионалы с опытом работы с детьми, разных возрастов.</p>
@@ -69,9 +69,9 @@
         </div>
         <h2 style="text-align: center;">Цели</h2>
         <div class="container">
-            <section class="item list"><img src="images/baby.png" alt="Самостоятельность - Иконка"><p>Самостоятельность</p></section>
-            <section class="item list"><img src="images/chase.png" alt="Коммуникация - Иконка"><p>Коммуникация</p></section>
-            <section class="item list"><img src="images/student.png" alt="Мобильность - Иконка"><p>Мобильность</p></section>
+            <section class="item list"><img src="images/baby.webp" alt="Самостоятельность - Иконка"><p>Самостоятельность</p></section>
+            <section class="item list"><img src="images/chase.webp" alt="Коммуникация - Иконка"><p>Коммуникация</p></section>
+            <section class="item list"><img src="images/student.webp" alt="Мобильность - Иконка"><p>Мобильность</p></section>
         </div>
 
         <h2 style="text-align: center; margin-top: 50px;">Наши специалисты</h2>
