--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
     <header>
         <a href="/">
         <div class="logo">
-            <img src="images/logo.png" alt="bear-logo">
+            <img src="images/logo.webp" alt="bear-logo">
             <h1>ШагАй</h1>
         </div>
         </a>
