fix copy button

--- a/team.html
+++ b/team.html
@@ -9,11 +9,6 @@
     <title>ШагАй — Наши специалисты</title>
 </head>
 <body>
-
-    <div id="preloader">
-    <div class="spinner"></div>
-    </div>
-
     <header>
         <a href="/">
         <div class="logo">
@@ -77,7 +72,7 @@
 
                     <div class="contact-block">
                         <h4 id="OlgaNumber">+7 (914) 692-96-94</h4>
-                        <button onclick="navigator.clipboard.writeText(document.getElementById('ElenaNumber').innerText)" >Скопировать номер телефона</button>
+                        <button class="hero-btn" onclick="navigator.clipboard.writeText(document.getElementById('OlgaNumber').innerText)" >Скопировать номер телефона</button>
                     </div>
                 </div>
             </section>
@@ -107,7 +102,7 @@
 
                     <div class="contact-block">
                         <h4 id="ElenaNumber">+7 (924) 128-99-96</h4>
-                        <button onclick="navigator.clipboard.writeText(document.getElementById('ElenaNumber').innerText)" >Скопировать номер телефона</button>
+                        <button class="hero-btn"  onclick="navigator.clipboard.writeText(document.getElementById('ElenaNumber').innerText)" >Скопировать номер телефона</button>
                     </div>
                 </div>
             </section>
@@ -140,7 +135,7 @@
 
                     <div class="contact-block">
                         <h4 id="OzodaNumber">+7 (924) 439-14-51</h4>
-                        <button onclick="navigator.clipboard.writeText(document.getElementById('OzodaNumber').innerText)" >Скопировать номер телефона</button>
+                        <button class="hero-btn"  onclick="navigator.clipboard.writeText(document.getElementById('OzodaNumber').innerText)" >Скопировать номер телефона</button>
                     </div>
                 </div>
             </section>
